sample/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apple-app
  namespace: test
  annotations:
    kubernetes.io/ingress.class: alb
    #kubernetes.io/ingress.class: nginx
  labels:
    app: apple-app
spec:
  rules:
  - host: apple.example.com
    http:
      paths:
        - path: /*
          backend:
            serviceName: apple-service
            servicePort: 5678
#        - path: /banana
#          backend:
#            serviceName: banana-service
#            servicePort: 5678
